--- a/index.html
+++ b/index.html
@@ -3,8 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Amo-te!!</title>
 </head>
 <body>
+    <h1>Feliz 1 ano de muita(o)... </h1>
+    <article>
+        <picture>
+            <img id="imagem-1" src="images/IMG_20241208_222346_733.png" alt="imagem-1">
+        </picture>
+        <h4></h4>               
+    </article>
+        
+    <article>
+        <picture>
+            <img id="imagem-2" src="" alt="imagem-2">
+        </picture>
+        <h4></h4>         
+    </article>
+
+    <article>
+        <picture id="imagem-3">
+            <img src="" alt="imagem-3">
+        </picture>
+        <h4></h4>           
+    </article>
+        
+    <article>
+        <picture id="imagem-4">
+            <img src="" alt="imagem-4">
+        </picture>
+        <h4></h4>          
+    </article>
+
+    <article>
+        <picture id="imagem-5">
+            <img src="" alt="imagem-5">
+        </picture>
+        <h4></h4>          
+    </article>
+
+    <article>
+        <picture id="imagem-6">
+            <img src="" alt="imagem-6">
+        </picture>
+        <h4></h4>          
+    </article>
+
+    <article>
+        <picture id="imagem-7">
+            <img src="" alt="imagem-7">
+        </picture>
+        <h4></h4>           
+    </article>
+
+    <article>
+        <picture id="imagem-8">
+            <img src="" alt="imagem-8">
+        </picture> 
+        <h4></h4>         
+    </article>
+    <h1>Eu amo te amar. Para sempre nós, até que Ele venha!</h1>
 </body>
 </html>
