--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         </picture> 
         <h4></h4>         
     </article>
-    <h1>Eu amo te amar. Para sempre nós, até que Ele venha!</h1>
+    <h1>Para sempre nós, até que Ele venha!</h1>
 </body>
 </html>
