finalizado (por enquanto)

--- a/index.html
+++ b/index.html
@@ -13,56 +13,85 @@
         <picture>
             <img id="imagem-1" src="images/IMG_20241208_222346_733.png" alt="imagem-1">
         </picture>
-        <h4></h4>               
+        <div class="texto-card">
+            <h4>Felicidade. Eu sou feliz ao teu lado sempre, a sua felicidade é a minha. Desde que você entrou em minha vida, ser feliz virou
+                algo cotidiano!
+            </h4>            
+        </div>
     </article>
         
     <article>
         <picture>
-            <img id="imagem-2" src="" alt="imagem-2">
+            <img id="imagem-2" src="images/IMG-20241209-WA0000.jpg" alt="imagem-2">
         </picture>
-        <h4></h4>         
+        <div class="texto-card">
+            <h4>Amor. Eu amo você, e amo tudo que você é. Você é a razão do meu sorriso, a luz dos meus dias e a paz do meu coração. 
+                Eu te amo mais do que palavras podem expressar!
+            </h4>            
+        </div>       
     </article>
 
     <article>
         <picture id="imagem-3">
-            <img src="" alt="imagem-3">
+            <img src="images/IMG-20250202-WA0065.jpg" alt="imagem-3">
         </picture>
-        <h4></h4>           
+        <div class="texto-card">
+            <h4>Companhia. Estar ao seu lado é o que me acalma, me trás conforto, paz, alegria. Os momentos contigo são os melhores, maiores!
+            </h4>            
+        </div>          
     </article>
         
     <article>
         <picture id="imagem-4">
-            <img src="" alt="imagem-4">
+            <img src="images/IMG-20250504-WA0035.jpg" alt="imagem-4">
         </picture>
-        <h4></h4>          
+        <div class="texto-card">
+            <h4>Propósito. Serviremos a Cristo juntos, nossa família estará na rocha que é Jesus, será nós, toda geração vindoura e Deus!
+            </h4>            
+        </div>        
     </article>
 
     <article>
         <picture id="imagem-5">
-            <img src="" alt="imagem-5">
+            <img src="images/IMG-20250504-WA0036.jpg" alt="imagem-5">
         </picture>
-        <h4></h4>          
+        <div class="texto-card">
+            <h4>Futuro. Construiremos o nosso juntos, já estamos construindo, já está sendo lindo. Até aqui Deus tem nos abençoado, o que ele uniu 
+                ninguém separa!
+            </h4>            
+        </div>         
     </article>
 
     <article>
         <picture id="imagem-6">
-            <img src="" alt="imagem-6">
+            <img src="images/4911478416931401229.jpg" alt="imagem-6">
         </picture>
-        <h4></h4>          
+        <div class="texto-card">
+            <h4>União. Eu te complemento, você me complementa. Já somos um só, uma só carne, porque temos a certeza esta união é eterna! 
+            </h4>            
+        </div>         
     </article>
 
     <article>
         <picture id="imagem-7">
-            <img src="" alt="imagem-7">
+            <img src="images/IMG_20250202_223733.jpg" alt="imagem-7">
         </picture>
-        <h4></h4>           
+        <div class="texto-card">
+            <h4>Intervenção do Espírito Santo. Eu vejo o brilho dEle em você, em nós. Ele nos guia, nos usa, nos faz sermos melhores, 
+                somos dependentes dEle!
+            </h4>            
+        </div>          
     </article>
 
     <article>
         <picture id="imagem-8">
-            <img src="" alt="imagem-8">
+            <img src="images/IMG_20250616_094538.jpg" alt="imagem-8">
         </picture> 
-        <h4></h4>         
+        <div class="texto-card">
+            <h4>Acompanhamento de Deus e gratidão. Ele sempre esteve conosco, sempre nos amou. Sou grato a Ele por nós, por ti. 
+                Sem Ele não somos nada, com Ele podemos tudo!
+            </h4>            
+        </div>        
     </article>
     <h1>Para sempre nós, até que Ele venha!</h1>
 </body>
